--- a/styles/galerie.css
+++ b/styles/galerie.css
@@ -60,13 +60,14 @@ nav{
 
 .content{
   margin-left: 20%;
-  width: 60%;
+  width: 100%;
 }
 
 #photo1{
-  position: relative;
+  position: static;
   z-index: 1;
   padding: 2%;
+  margin-right: 60%;
 }
 
 #photo1 img{
@@ -76,7 +77,7 @@ nav{
 #textephoto1{
   position: absolute;
   padding-left: 430px;
-  bottom: 110px;
+  top: 300px;
 }
 
 #photo2{
